--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "User documentation for WazapSuite",
   "scripts": {
-    "dev": "mintlify dev",
-    "build": "mintlify build",
-    "start": "mintlify start"
+    "dev": "npx mintlify dev",
+    "build": "npx mintlify build",
+    "start": "npx mintlify start"
   },
   "dependencies": {
     "mintlify": "^4.0.0"
